--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -10,7 +10,7 @@ register.sendletter=Вам выслано письмо для подтвержд
 usermenu.accounts=Мои счета/Финансы
 usermenu.orders=Ордера
 usermenu.enter=Ввод/Вывод средств
-usermenu.history=История
+usermenu.history=Мои ордера
 usermenu.settings=Настройки
 orders.title=Ордера
 orders.createordersell=Создать ордер на продажу
@@ -21,7 +21,6 @@ orders.currencyforsale=Продаю
 orders.sum1=Сумма
 orders.currencyforbuy=Валюта
 orders.sum2=Сумма
-orders.kurs=Курс
 orders.submit=Создать
 orders.yourcommission=Комиссия с данной операции составит
 orders.listtosell=Список ордеров на продажу
@@ -46,6 +45,36 @@ submitorder.title=Подтверждение размещения ордера
 submitorder.text=Вы создали ордер с такими данными
 submitorder.submit=Разместить ордер
 submitorder.edit=Редактировать ордер
+submitorder.buy=Покупаю
+submitorder.sumwithcommission=Сумма с учетом коммиссии
+submitorder.commission=Комиссия
+submitorder.change=Изменить
 createdorder.title=Ордер создан
-createdorder.text=Ваш ордер будет размещен в течение 1 минуты. 
+createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. За это время вы можете отредактировать его в своем личном кабинете в разделе Мои заявки. По истечению этого времени ордер станет недоступным для редактирования и его можно будет только удалить. 
 createdorder.edit=Посмотреть и отредактировать
+editorder.title=Редактирование ордера
+editorder.text=Внесите изменения
+myorders.title=Мои ордера
+myorders.text=Здесь можно удалить и отредактировать свои ордера
+myorders.buyorders=Ордера на покупку
+myorders.sellorders=Ордера на продажу
+myorders.currsell=Продаю
+myorders.amountsell=Сумма
+myorders.currbuy=Покупаю
+myorders.amountbuy=Сумма (без комиссии)
+myorders.commission=Комиссия
+myorders.amountwithcommission=Сумма с комиссией
+myorders.delete=Удалить
+myorders.edit=Редактировать
+myorders.deletesuccess=Ордер успешно удален
+myorders.deletefailed=Ордер не может быть удален. Обратитесь к администратору ресурса.
+myorders.datecreation=Дата создания
+myorders.datefinal=Дата исполнения
+myorders.status=Статус
+myorders.edit=Редактировать
+myorders.delete=Удалить
+myorders.noorders=У вас нет заявок
+orderstatus.inprocess=В обработке
+orderstatus.opened=Открыт
+orderstatus.closed=Закрыт
+
