--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -49,3 +49,7 @@ submitorder.edit=Редактировать ордер
 createdorder.title=Ордер создан
 createdorder.text=Ваш ордер будет размещен в течение 1 минуты. 
 createdorder.edit=Посмотреть и отредактировать
+merchants.amountToBeCredited = Итого сумма к зачислению
+mechants.commission = Комиссия
+mechants.yandexmoney = Яндекс Деньги
+merchants.rub = RUB
