Added Company Account Dao & Service. Fixed some bugs

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -53,3 +53,4 @@ merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия
 mechants.yandexmoney = Яндекс Деньги
 merchants.rub = RUB
+merchants.sumToPay = Итого сумма к оплате
