Fixed some issues

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -54,3 +54,11 @@ mechants.commission = Комиссия
 mechants.yandexmoney = Яндекс Деньги
 merchants.rub = RUB
 merchants.sumToPay = Итого сумма к оплате
+merchants.currency = Валюта
+merchants.meansOfPayment = Способ оплаты
+merchants.merchants = Мерчанты
+merchants.sum = Сумма
+NotEmpty.merchants.sum = Сумма не может быть пустой!
+Range.merchants.sum = Сумма не может быть меньше 1!
+mechants.cancelPayment=Отменить оплату
+mechants.submitPayment=Подтвердить оплату
