--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -52,17 +52,16 @@ createdorder.edit=Посмотреть и отредактировать
 merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
-merchants.rub = RUB
 merchants.sumToPay = Итого сумма к оплате
 merchants.currency = Валюта
 merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
 merchants.sum = Сумма
-NotEmpty.merchants.sum = Сумма не может быть пустой!
-Range.merchants.sum = Сумма не может быть меньше 1!
 mechants.cancelPayment=Отменить оплату
 mechants.submitPayment=Подтвердить оплату
 merchants.internalError=Произошла ошибка. Пожалуйста, попробуйте позже.
 merchants.notEnoughMoney=На счете недостаточно средств. Необходимо пополнить счет и провести новый платеж.
 merchants.authRejected=В авторизации платежа отказано.
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
+merchants.incorrectPaymentDetails=Некорректные данные платежа.
+merchants.invalidSum=Некорректная сумма платежа.
