--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -64,8 +64,6 @@ myorders.currbuy=Покупаю
 myorders.amountbuy=Сумма (без комиссии)
 myorders.commission=Комиссия
 myorders.amountwithcommission=Сумма с комиссией
-myorders.delete=Удалить
-myorders.edit=Редактировать
 myorders.deletesuccess=Ордер успешно удален
 myorders.deletefailed=Ордер не может быть удален. Обратитесь к администратору ресурса.
 myorders.datecreation=Дата создания
@@ -77,4 +75,19 @@ myorders.noorders=У вас нет заявок
 orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
-
+merchants.amountToBeCredited = Итого сумма к зачислению
+mechants.commission = Комиссия Биржы
+mechants.yandexmoney = Яндекс Деньги
+merchants.sumToPay = Итого сумма к оплате
+merchants.currency = Валюта
+merchants.meansOfPayment = Способ оплаты
+merchants.merchants = Мерчанты
+merchants.sum = Сумма
+mechants.cancelPayment=Отменить оплату
+mechants.submitPayment=Подтвердить оплату
+merchants.internalError=Произошла ошибка. Пожалуйста, попробуйте позже.
+merchants.notEnoughMoney=На счете недостаточно средств. Необходимо пополнить счет и провести новый платеж.
+merchants.authRejected=В авторизации платежа отказано.
+merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
+merchants.incorrectPaymentDetails=Некорректные данные платежа.
+merchants.invalidSum=Некорректная сумма платежа.
