Fixed bugs after rebase

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -76,15 +76,15 @@ orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
 merchants.amountToBeCredited = Итого сумма к зачислению
-mechants.commission = Комиссия Биржы
-mechants.yandexmoney = Яндекс Деньги
+merchants.commission = Комиссия Биржы
+merchants.yandexmoney = Яндекс Деньги
 merchants.sumToPay = Итого сумма к оплате
 merchants.currency = Валюта
 merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
 merchants.sum = Сумма
-mechants.cancelPayment=Отменить оплату
-mechants.submitPayment=Подтвердить оплату
+merchants.cancelPayment=Отменить оплату
+merchants.submitPayment=Подтвердить оплату
 merchants.internalError=Произошла ошибка. Пожалуйста, попробуйте позже.
 merchants.notEnoughMoney=На счете недостаточно средств. Необходимо пополнить счет и провести новый платеж.
 merchants.authRejected=В авторизации платежа отказано.
