--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -23,11 +23,10 @@ orders.currencyforbuy=Валюта
 orders.sum2=Сумма
 orders.submit=Создать
 orders.yourcommission=Комиссия с данной операции составит
-<<<<<<< HEAD
 orders.currsell=Продаю
 orders.amountsell=Сумма
 orders.currbuy=Покупаю
-orders.amountbuy=Сумма (без комиссии)
+orders.amountbuy=Сумма
 orders.commission=Комиссия
 orders.amountwithcommission=Сумма с комиссией
 orders.datecreation=Дата создания
@@ -35,10 +34,6 @@ orders.datefinal=Дата исполнения
 orders.listtosell=Список ордеров на продажу
 orders.listtobuy=Список ордеров на покупку
 orders.accept=Принять
-=======
-orders.listtosell=Список ордеров на продажу
-orders.listtobuy=Список ордеров на покупку
->>>>>>> 04262353b47fdd14c36825d96fcecbda53d964c1
 mywallets.title=Мои финансы
 mywallets.abalance=Активный баланс
 mywallets.rbalance=Зарезервировано
@@ -56,30 +51,24 @@ validation.passwordmismatch=Пароли не совпадают!
 validation.notreadrules=Необходимо ознакомиться с правилами ресурса!
 validation.orderNotEnoughMoney=На Вашем счету недостаточно денег для данной операции!
 submitorder.title=Подтверждение размещения ордера
-<<<<<<< HEAD
 submitorder.text=Подтвердите создание ордера с такими данными
-=======
-submitorder.text=Вы создали ордер с такими данными
->>>>>>> 04262353b47fdd14c36825d96fcecbda53d964c1
 submitorder.submit=Разместить ордер
 submitorder.edit=Редактировать ордер
 submitorder.buy=Покупаю
 submitorder.sumwithcommission=Сумма с учетом коммиссии
 submitorder.commission=Комиссия
 submitorder.change=Изменить
-<<<<<<< HEAD
 submitorder.cancell=Отменить
 createdorder.title=Ордер создан
-createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. За это время вы можете отредактировать его в своем личном кабинете в разделе Мои заявки. По истечению этого времени ордер станет недоступным для редактирования и его можно будет только удалить. 
-=======
-createdorder.title=Ордер создан
-createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. За это время вы можете отредактировать его в своем личном кабинете в разделе Мои заявки. По истечению этого времени ордер станет недоступным для редактирования и его можно будет только удалить.
->>>>>>> 04262353b47fdd14c36825d96fcecbda53d964c1
-createdorder.edit=Посмотреть и отредактировать
+createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. Если вы ошиблись при создании ордера, удалите его в своем личном кабинете в разделе Мои заявки. По истечении этого времени ордер станет доступен всем пользователям для покупки. 
+createdorder.edit=Перейти к моим ордерам
 editorder.title=Редактирование ордера
 editorder.text=Внесите изменения
+acceptordersuccess.title=Ордер принят!
+acceptordersuccess.text = Вы успешно приняли ордер.
+acceptordersuccess.link=Посмотреть
 myorders.title=Мои ордера
-myorders.text=Здесь можно удалить и отредактировать свои ордера
+myorders.text=Здесь можно просмотреть и удалить свои ордера
 myorders.buyorders=Ордера на покупку
 myorders.sellorders=Ордера на продажу
 myorders.currsell=Продаю
@@ -88,29 +77,21 @@ myorders.currbuy=Покупаю
 myorders.amountbuy=Сумма (без комиссии)
 myorders.commission=Комиссия
 myorders.amountwithcommission=Сумма с комиссией
-<<<<<<< HEAD
 myorders.delete=Удалить
 myorders.edit=Редактировать
 myorders.deletesuccess=Ордер успешно удален
 myorders.deletefailed=Ордер не может быть удален. Обратитесь к администратору ресурса.
 myorders.editfailed=Ошибка редактирования ордера!
 myorders.editsuccess=Ордер изменен
-=======
-myorders.deletesuccess=Ордер успешно удален
-myorders.deletefailed=Ордер не может быть удален. Обратитесь к администратору ресурса.
->>>>>>> 04262353b47fdd14c36825d96fcecbda53d964c1
 myorders.datecreation=Дата создания
 myorders.datefinal=Дата исполнения
 myorders.status=Статус
 myorders.edit=Редактировать
 myorders.delete=Удалить
-myorders.noorders=У вас нет заявок
+myorders.noorders=У вас нет ордеров
 orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
-<<<<<<< HEAD
-
-=======
 merchants.amountToBeCredited = Итого сумма к зачислению
 merchants.commission = Комиссия Биржы
 merchants.yandexmoney = Яндекс Деньги
@@ -127,4 +108,3 @@ merchants.authRejected=В авторизации платежа отказано
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.incorrectPaymentDetails=Некорректные данные платежа.
 merchants.invalidSum=Некорректная сумма платежа.
->>>>>>> 04262353b47fdd14c36825d96fcecbda53d964c1
