Added frontend and refactoring Yandex.Money merchant

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -60,7 +60,7 @@ submitorder.commission=Комиссия
 submitorder.change=Изменить
 submitorder.cancell=Отменить
 createdorder.title=Ордер создан
-createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. Если вы ошиблись при создании ордера, удалите его в своем личном кабинете в разделе Мои заявки. По истечении этого времени ордер станет доступен всем пользователям для покупки. 
+createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. Если вы ошиблись при создании ордера, удалите его в своем личном кабинете в разделе Мои заявки. По истечении этого времени ордер станет доступен всем пользователям для покупки.
 createdorder.edit=Перейти к моим ордерам
 editorder.title=Редактирование ордера
 editorder.text=Внесите изменения
@@ -86,15 +86,14 @@ myorders.editsuccess=Ордер изменен
 myorders.datecreation=Дата создания
 myorders.datefinal=Дата исполнения
 myorders.status=Статус
-myorders.edit=Редактировать
-myorders.delete=Удалить
 myorders.noorders=У вас нет ордеров
 orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
 merchants.amountToBeCredited = Итого сумма к зачислению
-merchants.commission = Комиссия Биржы
-merchants.yandexmoney = Яндекс Деньги
+mechants.commission = Комиссия Биржы
+mechants.yandexmoney = Яндекс Деньги
+mechants.perfectmoney = Perfect Money
 merchants.sumToPay = Итого сумма к оплате
 merchants.currency = Валюта
 merchants.meansOfPayment = Способ оплаты
