Update Yandex.Money functional

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -94,10 +94,12 @@ merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
 mechants.perfectmoney = Perfect Money
+merchants.notEnoughWalletMoney = Не достаточно денег на кошельке
 merchants.sumToPay = Итого сумма к оплате
 merchants.currency = Валюта
 merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
+merchants.commission = Комиссия
 merchants.sum = Сумма
 merchants.cancelPayment=Отменить оплату
 merchants.submitPayment=Подтвердить оплату
@@ -107,3 +109,5 @@ merchants.authRejected=В авторизации платежа отказано
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.incorrectPaymentDetails=Некорректные данные платежа.
 merchants.invalidSum=Некорректная сумма платежа.
+
+merchants.noWallet=У вас нет открытых счетов
