Finished Yandex.Money functional and Transaction History

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -94,7 +94,7 @@ merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
 mechants.perfectmoney = Perfect Money
-merchants.notEnoughWalletMoney = Не достаточно денег на кошельке
+merchants.notEnoughWalletMoney = Недостаточно денег на кошельке
 merchants.sumToPay = Итого сумма к оплате
 merchants.currency = Валюта
 merchants.meansOfPayment = Способ оплаты
@@ -105,9 +105,18 @@ merchants.cancelPayment=Отменить оплату
 merchants.submitPayment=Подтвердить оплату
 merchants.internalError=Произошла ошибка. Пожалуйста, попробуйте позже.
 merchants.notEnoughMoney=На счете недостаточно средств. Необходимо пополнить счет и провести новый платеж.
-merchants.authRejected=В авторизации платежа отказано.
+merchants.authRejected=В авторизации платежа отказано. Пожалуйста, попробуйте позже.
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.incorrectPaymentDetails=Некорректные данные платежа.
 merchants.invalidSum=Некорректная сумма платежа.
-
+merchants.successfulMoneyInput = Спасибо. Средства перечислены на Ваш кошелек.
 merchants.noWallet=У вас нет открытых счетов
+transactions.title=История операций
+transaction.id = Id
+transactions.absent = История операций пуста
+transaction.walletId = Номер кошелька
+transaction.amount = Сумма
+transaction.transactionType = Тип операции
+transaction.date = Дата операции
+transaction.commission = Комиссия(%)
+transaction.currency=Валюта
