--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -7,11 +7,18 @@ register.repeatpassword=Повторите пароль*
 register.readrules=Ознакомлен(-а) с правилами регистрации*
 register.submit=Подтвердить
 register.sendletter=Вам выслано письмо для подтверждения регистрации на адрес
-usermenu.accounts=Мои счета/Финансы
+usermenu.mywallets=Мои счета
 usermenu.orders=Ордера
-usermenu.enter=Ввод/Вывод средств
-usermenu.history=Мои ордера
+usermenu.myorders=Мои ордера
+usermenu.inputCredits=Ввод средств
+usermenu.outputCredits=Ввод средств
+usermenu.history=История операций
 usermenu.settings=Настройки
+subusermenu.commissions=Комиссии
+subusermenu.news=Новости
+subusermenu.api=API
+subusermenu.rules=Правила
+subusermenu.faq=FAQ
 orders.title=Ордера
 orders.createordersell=Создать ордер на продажу
 orders.createorderbuy=Создать ордер на покупку
@@ -90,13 +97,14 @@ myorders.noorders=У вас нет ордеров
 orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
+merchants.inputTitle = Ввод средств
 merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
 mechants.perfectmoney = Perfect Money
 merchants.notEnoughWalletMoney = Недостаточно денег на кошельке
 merchants.sumToPay = Итого сумма к оплате
-merchants.currency = Валюта
+merchants.inputCurrency = Валюта к вводу
 merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
 merchants.commission = Комиссия
@@ -111,6 +119,7 @@ merchants.incorrectPaymentDetails=Некорректные данные плат
 merchants.invalidSum=Некорректная сумма платежа.
 merchants.successfulMoneyInput = Спасибо. Средства перечислены на Ваш кошелек.
 merchants.noWallet=У вас нет открытых счетов
+
 transactions.title=История операций
 transaction.id = Id
 transactions.absent = История операций пуста
