orders for buy and add commission

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -27,7 +27,7 @@ orders.ordersell=Ордер на продажу
 orders.orderbuy=Ордер на покупку
 orders.currencyforsale=Продаю
 orders.sum1=Сумма
-orders.currencyforbuy=Валюта
+orders.currencyforbuy=Покупаю
 orders.sum2=Сумма
 orders.submit=Создать
 orders.yourcommission=Комиссия с данной операции составит
@@ -35,7 +35,7 @@ orders.currsell=Продаю
 orders.amountsell=Сумма
 orders.currbuy=Покупаю
 orders.amountbuy=Сумма
-orders.commission=Комиссия
+orders.commission=Комиссия, %
 orders.amountwithcommission=Сумма с комиссией
 orders.datecreation=Дата создания
 orders.datefinal=Дата исполнения
@@ -45,6 +45,8 @@ orders.accept=Принять
 mywallets.title=Мои финансы
 mywallets.abalance=Активный баланс
 mywallets.rbalance=Зарезервировано
+mywallets.balance=Кредитный баланс
+mywallets.commissionbalance=Профитный баланс
 mywallets.input=Пополнить
 mywallets.output=Вывести
 mywallets.createorder=Создать ордер
@@ -68,10 +70,13 @@ submitorder.commission=Комиссия
 submitorder.change=Изменить
 submitorder.cancell=Отменить
 createdorder.title=Ордер создан
-createdorder.text=Ваш ордер будет размещен в общем стеке в течение 5 минут. Если вы ошиблись при создании ордера, удалите его в своем личном кабинете в разделе Мои заявки. По истечении этого времени ордер станет доступен всем пользователям для покупки.
+createdorder.text=Ваш ордер размещен в общем стеке.
 createdorder.edit=Перейти к моим ордерам
 editorder.title=Редактирование ордера
 editorder.text=Внесите изменения
+acceptorder.title=Принятие ордера
+acceptorder.text=Вы принимаете ордер с такими данными
+acceptorder.submit=Принять
 acceptordersuccess.title=Ордер принят!
 acceptordersuccess.text = Вы успешно приняли ордер.
 acceptordersuccess.link=Посмотреть
@@ -83,7 +88,7 @@ myorders.currsell=Продаю
 myorders.amountsell=Сумма
 myorders.currbuy=Покупаю
 myorders.amountbuy=Сумма (без комиссии)
-myorders.commission=Комиссия
+myorders.commission=Комиссия, %
 myorders.amountwithcommission=Сумма с комиссией
 myorders.delete=Удалить
 myorders.edit=Редактировать
