--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -142,3 +142,69 @@ transaction.datetime = Дата операции
 transaction.commission = Комиссия(%)
 transaction.currency=Валюта
 transaction.yandexmoney=Яндекс.Деньги
+dasbboard.loginText = Логин
+dasbboard.passwordText = Пароль
+dasbboard.entrance = Вход
+dasbboard.signUp = Регистрация
+dasbboard.forgotPassword = Забыли пароль?
+dasbboard.hello = Добрый день!
+dasbboard.goOut = Выйти
+dasbboard.general = Главная
+dasbboard.personalArea = Личный кабинет
+dasbboard.news = Новости
+dasbboard.training = Обучение
+dasbboard.lastOrder = Последняя сделка:
+dasbboard.priceStart = Цена открытия:
+dasbboard.priceEnd = Цена закрытия:
+dasbboard.volume = Объем:
+dasbboard.BUY = КУПИТЬ
+dasbboard.SELL = ПРОДАТЬ
+dasbboard.yourBalance = Ваши средства
+dasbboard.lowestPrice = Мин. Цена
+dasbboard.highestPrice = Макс. Цена
+dasbboard.amount = Количество
+dasbboard.priceFor = Цена за
+dasbboard.total = Всего:
+dasbboard.fee = Комиссия:
+dasbboard.calculate = Подсчитать:
+dasbboard.buy = Купить
+dasbboard.sell = Продать
+dasbboard.buyOrders = Ордера на покупку:
+dasbboard.sellOrders = Ордера на продажу:
+dasbboard.howItWork = КАК ЭТО РАБОТАЕТ
+dasbboard.forBeginners = Для начинающих
+dasbboard.buyCurrency = Купить валюту
+dasbboard.sellCurrency = Продать валюту
+dasbboard.tradeByCurrency = Торговля валютой
+dasbboard.documentation = ДОКУМЕНТАЦИЯ
+dasbboard.FAQ = FAQ
+dasbboard.depositAndWithdraw = Пополнение и вывод
+dasbboard.feeForTransaction = Комиссия за транзакцию
+dasbboard.legalityAndSecurity = Легальность и безопасность
+dasbboard.tools = ИНСТРУМЕНТЫ
+dasbboard.tradeAPI = Торговое API
+dasbboard.mobileApp = Mobile App
+dasbboard.ourWeb = EXRATES.ME
+dasbboard.aboutUs = О нас
+dasbboard.contactsAndSupport = Контакты и поддержка
+dasbboard.PressAboutUs = Пресса о нас
+dasbboard.allRightsReserved = © 2016 EXRATES LTD Торговые марки принадлежат их соответствующим владельцам. Все права защищены
+
+admin.title = Администрирование
+admin.admins = Администраторы
+admin.users = Пользователи
+admin.finance = Финансы
+admin.listOfAdmins = Список администраторов
+admin.listOfUsers = Список пользователей
+admin.addAdmin = Добавить администратора
+admin.addUser = Добавить пользователя
+admin.user = Пользователь
+admin.email = Email
+admin.role = Роль
+admin.status = Статус
+admin.editUser = Редактировать пользователя
+admin.login = Логин
+admin.password = Пароль
+admin.phone = Телефон
+admin.save = Сохранить
+admin.cancel = Отмена
