--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -100,9 +100,13 @@ myorders.datecreation=Дата создания
 myorders.datefinal=Дата исполнения
 myorders.status=Статус
 myorders.noorders=У вас нет ордеров
+myorders.create=Создать ордер
 orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
+deleteorder.title=Удаление ордера
+deleteorder.text=Подтвердите удаление ордера с такими данными
+deleteorder.submit=Удалить
 merchants.inputTitle = Ввод средств
 merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
@@ -133,12 +137,17 @@ transaction.id = Id транзакции
 transactions.absent = История операций пуста
 transaction.walletId = Номер кошелька
 transaction.amount = Сумма
+transaction.amountBuy = Сумма покупки
 transaction.merchant=Платежная система
 transaction.commissionAmount = Сумма комиссии
-transaction.operationType = Тип операции
+transaction.operationType=Тип
 transaction.operationTypeINPUT=Ввод средств
 transaction.operationTypeOUTPUT=Вывод средств
-transaction.datetime = Дата операции
-transaction.commission = Комиссия(%)
+transaction.operationTypeCreateOrder=Создание ордера
+transaction.operationTypeAcceptOrder=Принятие ордера
+transaction.datetime=Дата
+transaction.commission=Комиссия(%)
 transaction.currency=Валюта
+transaction.currencyBuy=Валюта покупки
 transaction.yandexmoney=Яндекс.Деньги
+transaction.exrates=exrates.me
