Added Perfect Money functional

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -115,6 +115,8 @@ merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
 merchants.commission = Комиссия
 merchants.sum = Сумма
+merchants.continue =Продолжить
+merchants.dismiss=Отменить
 merchants.invalidMerchant=Извините, мерчанта не поддерживается
 merchants.cancelPayment=Отменить оплату
 merchants.submitPayment=Подтвердить оплату
@@ -136,6 +138,8 @@ transaction.amount = Сумма
 transaction.merchant=Платежная система
 transaction.commissionAmount = Сумма комиссии
 transaction.operationType = Тип операции
+merchants.deposit=Пополнить
+merchants.withdraw=Вывести
 transaction.operationTypeINPUT=Ввод средств
 transaction.operationTypeOUTPUT=Вывод средств
 transaction.datetime = Дата операции
