--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -104,6 +104,7 @@ orderstatus.inprocess=В обработке
 orderstatus.opened=Открыт
 orderstatus.closed=Закрыт
 merchants.inputTitle = Ввод средств
+merchants.outputTitle= Вывод средств
 merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
@@ -126,7 +127,15 @@ merchants.authRejected=В авторизации платежа отказано
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.incorrectPaymentDetails=Некорректные данные платежа.
 merchants.invalidSum=Некорректная сумма платежа.
+merchants.notAvaliablePayment=К сожалению в настоящий момент оплата недоступна.
 merchants.successfulMoneyInput = Спасибо. Средства перечислены на Ваш кошелек.
+merchants.modalInputHeader=Вы вводите __amount __currency через платежную систему __merchant
+merchants.modalInputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalInputFinalSum=Итого сумма к оплате : __amount __currency
+merchants.modalOutputHeader=Вы вводите __amount __currency через платежную систему __merchant
+merchants.modalOutputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalOutputFinalSum=Итого сумма к выводу : __amount __currency
+merchants.modalOutputWallet=Введите номер кошелька :
 merchants.successfulBalanceDeposit=Вы успешно пополнили счет на сумму: {0}
 merchants.successfulBalanceWithdraw=Вы успешно вывели средства со счета на сумму: {0}
 merchants.noWallet=У вас нет открытых счетов
@@ -146,3 +155,4 @@ transaction.datetime = Дата операции
 transaction.commission = Комиссия(%)
 transaction.currency=Валюта
 transaction.yandexmoney=Яндекс.Деньги
+transaction.perfectmoney=Perfect.Money
