--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -219,3 +219,5 @@ admin.phone = Телефон
 admin.save = Сохранить
 admin.cancel = Отмена
 
+emailsubmitregister.subject=Подтверждение регистрации на exrates.me
+emailsubmitregister.text=Вы зарегистрировались на exrates.me. Для подтверждения регистрации пройдите по ссылке
