--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1,3 +1,7 @@
+﻿login.title=Пожалуйста, войдите
+login.submit=Войти
+login.email=Email
+login.password=Пароль
 register.title=Регистрация нового пользователя
 register.form=Форма регистрации
 register.loginLabel=Используется как логин для входа, изменению не подлежит.
@@ -108,6 +112,7 @@ deleteorder.title=Удаление ордера
 deleteorder.text=Подтвердите удаление ордера с такими данными
 deleteorder.submit=Удалить
 merchants.inputTitle = Ввод средств
+merchants.outputTitle= Вывод средств
 merchants.amountToBeCredited = Итого сумма к зачислению
 mechants.commission = Комиссия Биржы
 mechants.yandexmoney = Яндекс Деньги
@@ -119,6 +124,8 @@ merchants.meansOfPayment = Способ оплаты
 merchants.merchants = Мерчанты
 merchants.commission = Комиссия
 merchants.sum = Сумма
+merchants.continue =Продолжить
+merchants.dismiss=Отменить
 merchants.invalidMerchant=Извините, мерчанта не поддерживается
 merchants.cancelPayment=Отменить оплату
 merchants.submitPayment=Подтвердить оплату
@@ -128,9 +135,17 @@ merchants.authRejected=В авторизации платежа отказано
 merchants.limitExceed=Превышен лимит. Пожалуйста, попробуйте позже.
 merchants.incorrectPaymentDetails=Некорректные данные платежа.
 merchants.invalidSum=Некорректная сумма платежа.
+merchants.notAvaliablePayment=К сожалению в настоящий момент оплата недоступна.
 merchants.successfulMoneyInput = Спасибо. Средства перечислены на Ваш кошелек.
-merchants.successfulBalanceDeposit=Вы успешно пополнили счет на сумму: {0}
-merchants.successfulBalanceWithdraw=Вы успешно вывели средства со счета на сумму: {0}
+merchants.modalInputHeader=Вы вводите __amount __currency через платежную систему __merchant
+merchants.modalInputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalInputFinalSum=Итого сумма к оплате : __amount __currency
+merchants.modalOutputHeader=Вы вводите __amount __currency через платежную систему __merchant
+merchants.modalOutputCommission=Коммиссия биржи составит : __amount __currency (__percent)
+merchants.modalOutputFinalSum=Итого сумма к выводу : __amount __currency
+merchants.modalOutputWallet=Введите номер кошелька :
+merchants.successfulBalanceDeposit=Вы успешно ввели {0}. Комиссия {1}%, Вам зачислено : {2}
+merchants.successfulBalanceWithdraw=Вы успешно вывели со счета {0}. Комиссия {1}%, Вам перечислено : {2}
 merchants.noWallet=У вас нет открытых счетов
 transactions.title=История операций
 transaction.id = Id транзакции
@@ -141,6 +156,8 @@ transaction.amountBuy = Сумма покупки
 transaction.merchant=Платежная система
 transaction.commissionAmount = Сумма комиссии
 transaction.operationType=Тип
+merchants.deposit=Пополнить
+merchants.withdraw=Вывести
 transaction.operationTypeINPUT=Ввод средств
 transaction.operationTypeOUTPUT=Вывод средств
 transaction.operationTypeCreateOrder=Создание ордера
@@ -150,8 +167,8 @@ transaction.commission=Комиссия(%)
 transaction.currency=Валюта
 transaction.currencyBuy=Валюта покупки
 transaction.yandexmoney=Яндекс.Деньги
+transaction.perfectmoney=Perfect.Money
 transaction.exrates=exrates.me
-transaction.yandexmoney=Яндекс.Деньги
 dasbboard.loginText = Логин
 dasbboard.passwordText = Пароль
 dasbboard.entrance = Вход
@@ -221,3 +238,6 @@ admin.cancel = Отмена
 
 emailsubmitregister.subject=Подтверждение регистрации на exrates.me
 emailsubmitregister.text=Вы зарегистрировались на exrates.me. Для подтверждения регистрации пройдите по ссылке
+
+
+
