--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -12,6 +12,7 @@ register.repeatpassword=Повторите пароль*
 register.readrules=Ознакомлен(-а) с правилами регистрации*
 register.submit=Зарегистрироваться
 register.sendletter=Вам выслано письмо для подтверждения регистрации на адрес
+register.successfullyproved=Вы успешно подтвердили свой электронный адрес. Теперь вы можете войти.
 usermenu.mywallets=Мои счета
 usermenu.orders=Ордера
 usermenu.myorders=Мои ордера
@@ -239,5 +240,6 @@ admin.cancel = Отмена
 emailsubmitregister.subject=Подтверждение регистрации на exrates.me
 emailsubmitregister.text=Вы зарегистрировались на exrates.me. Для подтверждения регистрации пройдите по ссылке
 
-
+dberror.title=Ошибка!
+dberror.text=К сожалению, операция не может быть выполнена в данный момент. Попробуйте позже
 
