--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -2,6 +2,9 @@
 login.submit=Войти
 login.email=Email
 login.password=Пароль
+login.notFound =Неверный пароль или логин!
+login.blocked =Аккаунт заблокирован!
+login.errorLogin =Ошибка входа!
 register.title=Регистрация нового пользователя
 register.form=Форма регистрации
 register.loginLabel=Используется как логин для входа, изменению не подлежит.
