Provided blockchain functionality

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -152,6 +152,8 @@ merchants.modalOutputWallet=Введите номер кошелька :
 merchants.successfulBalanceDeposit=Вы успешно ввели {0}. Комиссия {1}%, Вам зачислено : {2}
 merchants.successfulBalanceWithdraw=Вы успешно вывели со счета {0}. Комиссия {1}%, Вам перечислено : {2}
 merchants.noWallet=У вас нет открытых счетов
+#not translated
+merchants.makePay=Пожалуйста , оплатите %1s по счету %2s
 transactions.title=История операций
 transaction.id = Id транзакции
 transactions.absent = История операций пуста
@@ -246,4 +248,5 @@ emailsubmitregister.text=Вы зарегистрировались на exrates.
 
 dberror.title=Ошибка!
 dberror.text=К сожалению, операция не может быть выполнена в данный момент. Попробуйте позже
+
 
