add change password and finpassword

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -69,6 +69,9 @@ validation.passwordmismatch=Пароли не совпадают!
 validation.notreadrules=Необходимо ознакомиться с правилами ресурса!
 validation.orderNotEnoughMoney=На Вашем счету недостаточно денег для данной операции!
 validation.phoneincorrect=Введите телефонный номер в формате "380671234567"!
+#not translated --Begin
+validation.passwordincorrect=Пароль должен содержать буквы и цифры общей длиной от 8 до 20 символов!
+#not translated --End
 submitorder.title=Подтверждение размещения ордера
 submitorder.text=Подтвердите создание ордера с такими данными
 submitorder.submit=Разместить ордер
@@ -176,75 +179,92 @@ transaction.currencyBuy=Валюта покупки
 transaction.yandexmoney=Яндекс.Деньги
 transaction.perfectmoney=Perfect.Money
 transaction.exrates=exrates.me
-dasbboard.loginText = Логин
-dasbboard.passwordText = Пароль
-dasbboard.entrance = Вход
-dasbboard.signUp = Регистрация
-dasbboard.forgotPassword = Забыли пароль?
-dasbboard.hello = Добрый день!
-dasbboard.goOut = Выйти
-dasbboard.general = Главная
-dasbboard.personalArea = Личный кабинет
-dasbboard.news = Новости
-dasbboard.training = Обучение
-dasbboard.lastOrder = Последняя сделка:
-dasbboard.priceStart = Цена открытия:
-dasbboard.priceEnd = Цена закрытия:
-dasbboard.volume = Объем:
-dasbboard.BUY = КУПИТЬ
-dasbboard.SELL = ПРОДАТЬ
-dasbboard.yourBalance = Ваши средства
-dasbboard.lowestPrice = Мин. Цена
-dasbboard.highestPrice = Макс. Цена
-dasbboard.amount = Количество
-dasbboard.priceFor = Цена за
-dasbboard.total = Всего:
-dasbboard.fee = Комиссия:
-dasbboard.calculate = Подсчитать:
-dasbboard.buy = Купить
-dasbboard.sell = Продать
-dasbboard.buyOrders = Ордера на покупку:
-dasbboard.sellOrders = Ордера на продажу:
-dasbboard.howItWork = КАК ЭТО РАБОТАЕТ
-dasbboard.forBeginners = Для начинающих
-dasbboard.buyCurrency = Купить валюту
-dasbboard.sellCurrency = Продать валюту
-dasbboard.tradeByCurrency = Торговля валютой
-dasbboard.documentation = ДОКУМЕНТАЦИЯ
-dasbboard.FAQ = FAQ
-dasbboard.depositAndWithdraw = Пополнение и вывод
-dasbboard.feeForTransaction = Комиссия за транзакцию
-dasbboard.legalityAndSecurity = Легальность и безопасность
-dasbboard.tools = ИНСТРУМЕНТЫ
-dasbboard.tradeAPI = Торговое API
-dasbboard.mobileApp = Mobile App
-dasbboard.ourWeb = EXRATES.ME
-dasbboard.aboutUs = О нас
-dasbboard.contactsAndSupport = Контакты и поддержка
-dasbboard.PressAboutUs = Пресса о нас
-dasbboard.allRightsReserved = © 2016 EXRATES LTD Торговые марки принадлежат их соответствующим владельцам. Все права защищены
+dashboard.loginText = Логин
+dashboard.passwordText = Пароль
+dashboard.entrance = Вход
+dashboard.signUp = Регистрация
+dashboard.forgotPassword = Забыли пароль?
+dashboard.hello = Добрый день!
+dashboard.goOut = Выйти
+dashboard.general = Главная
+dashboard.personalArea = Личный кабинет
+dashboard.news = Новости
+dashboard.training = Обучение
+dashboard.lastOrder = Последняя сделка:
+dashboard.priceStart = Цена открытия:
+dashboard.priceEnd = Цена закрытия:
+dashboard.volume = Объем:
+dashboard.BUY = КУПИТЬ
+dashboard.SELL = ПРОДАТЬ
+dashboard.yourBalance = Ваши средства
+dashboard.lowestPrice = Мин. Цена
+dashboard.highestPrice = Макс. Цена
+dashboard.amount = Количество
+dashboard.priceFor = Цена за
+dashboard.total = Всего:
+dashboard.fee = Комиссия:
+dashboard.calculate = Подсчитать:
+dashboard.buy = Купить
+dashboard.sell = Продать
+dashboard.buyOrders = Ордера на покупку:
+dashboard.sellOrders = Ордера на продажу:
+dashboard.howItWork = КАК ЭТО РАБОТАЕТ
+dashboard.forBeginners = Для начинающих
+dashboard.buyCurrency = Купить валюту
+dashboard.sellCurrency = Продать валюту
+dashboard.tradeByCurrency = Торговля валютой
+dashboard.documentation = ДОКУМЕНТАЦИЯ
+dashboard.FAQ = FAQ
+dashboard.depositAndWithdraw = Пополнение и вывод
+dashboard.feeForTransaction = Комиссия за транзакцию
+dashboard.legalityAndSecurity = Легальность и безопасность
+dashboard.tools = ИНСТРУМЕНТЫ
+dashboard.tradeAPI = Торговое API
+dashboard.mobileApp = Mobile App
+dashboard.ourWeb = EXRATES.ME
+dashboard.aboutUs = О нас
+dashboard.contactsAndSupport = Контакты и поддержка
+dashboard.PressAboutUs = Пресса о нас
+dashboard.allRightsReserved = © 2016 EXRATES LTD Торговые марки принадлежат их соответствующим владельцам. Все права защищены
 
+#not translated --Begin
+dashboard.resetPasswordTitle = Форма восстановление пароля
+dashboard.resetPasswordButton = Восстановить пароль
+dashboard.updatePasswordTitle = Форма изменения пароля
 admin.title = Администрирование
 admin.admins = Администраторы
 admin.users = Пользователи
 admin.finance = Финансы
 admin.listOfAdmins = Список администраторов
 admin.listOfUsers = Список пользователей
-admin.addAdmin = Добавить администратора
 admin.addUser = Добавить пользователя
 admin.user = Пользователь
 admin.email = Email
+admin.registrationDate = Дата регистрации
 admin.role = Роль
 admin.status = Статус
 admin.editUser = Редактировать пользователя
 admin.login = Логин
 admin.password = Пароль
+admin.confirmpassword = Повторите пароль
+admin.finPassword = Финансовый пароль
 admin.phone = Телефон
 admin.save = Сохранить
 admin.cancel = Отмена
+admin.changePassword = Изменить пароль
+admin.changeFinPassword = Изменить финансовый пароль
+admin.companyWallet = Счет организации
+admin.changePasswordSendEmail = Вам на почту будет отправлено письмо для подтверждения операции, проверьте почту и следуйте дальнейшим инструкциям
 
 emailsubmitregister.subject=Подтверждение регистрации на exrates.me
 emailsubmitregister.text=Вы зарегистрировались на exrates.me. Для подтверждения регистрации пройдите по ссылке
+emailsubmitChangePassword.subject=Подтверждение изменения пароля exrates.me
+emailsubmitChangePassword.text=Вы подали запрос на изменение пароля exrates.me. Для подтверждения пройдите по ссылке
+emailsubmitChangeFinPassword.subject=Подтверждение изменения финансового пароля exrates.me
+emailsubmitChangeFinPassword.text=Вы подали запрос на изменение финансового пароля exrates.me. Для подтверждения пройдите по ссылке
+emailsubmitResetPassword.subject=Подтверждение на восстановление пароля exrates.me
+emailsubmitResetPassword.text=Вы подали запрос на восстановление пароля exrates.me. Для подтверждения пройдите по ссылке
+#not translated --End
 
 dberror.title=Ошибка!
 dberror.text=К сожалению, операция не может быть выполнена в данный момент. Попробуйте позже
