PROGRAM-84 new form "orders" is ready. There are some corrections in "dashboard"

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -173,13 +173,13 @@ mywallets.rbalance=reserved
 mywallets.title=my wallets
 orders=buy orders
 orders.accept=accept
-orders.amountbuy=sum?
+orders.amountbuy=sum
 orders.amountsell=sum
 orders.amountwithcommission=commission sum
 orders.commission=commission, %
 orders.createorderbuy=create orderbuy
 orders.createordersell=Create a sell order
-orders.currbuy=bur?
+orders.currbuy=buy
 orders.currencyforbuy=buy
 orders.currencyforsale=sale
 orders.currsell=Sell
@@ -246,7 +246,7 @@ usermenu.history=history of transactions
 usermenu.inputCredits=input credits
 usermenu.myorders=my orders
 usermenu.mywallets=my wallets
-usermenu.orders=orders?
+usermenu.orders=orders
 usermenu.outputCredits=output credits
 usermenu.settings=settings
 validation.emailexists=this e-mail already exists!
