PROGRAM-84 deleted files with suffix '-orig' (versions of old design). Little corrections.

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -259,3 +259,6 @@ validation.passwordincorrect=Пароль должен содержать бук
 validation.passwordmismatch=Пароли не совпадают!
 validation.passwordrequired=Введите пароль!
 validation.phoneincorrect=Введите телефонный номер в формате "380671234567"!
+
+
+dashboard.otherpairs=Другие пары
