--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -262,3 +262,4 @@ validation.phoneincorrect=Введите телефонный номер в фо
 
 
 dashboard.otherpairs=Другие пары
+merchants.currencyforoutput = Валюта к выводу
