PROGRAM-84 +settings +fogot_password. added new key to en locale

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -261,3 +261,8 @@ validation.passwordincorrect=The password should consist of letters and numbers 
 validation.passwordmismatch=passwords do not match!
 validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
+
+
+
+dashboard.otherpairs=Other pairs
+merchants.currencyforoutput = output currency
