correct merchants on input/output forms

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -127,7 +127,7 @@ merchants.modalInputFinalSum=Итого сумма к оплате : __amount __
 merchants.modalInputHeader=Вы вводите __amount __currency через платежную систему __merchant
 merchants.modalOutputCommission=Коммиссия биржи составит : __amount __currency (__percent)
 merchants.modalOutputFinalSum=Итого сумма к выводу : __amount __currency
-merchants.modalOutputHeader=Вы вводите __amount __currency через платежную систему __merchant
+merchants.modalOutputHeader=Вы выводите __amount __currency через платежную систему __merchant
 merchants.modalOutputWallet=Введите номер кошелька :
 merchants.noWallet=У вас нет открытых счетов
 merchants.notAvaliablePayment=К сожалению в настоящий момент оплата недоступна.
