--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -264,3 +264,4 @@ validation.phoneincorrect=Введите телефонный номер в фо
 
 dashboard.otherpairs=Другие пары
 merchants.currencyforoutput = Валюта к выводу
+dashboard.orderPrice=Цена
