--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -268,3 +268,4 @@ validation.phoneincorrect=Enter the phone number in "380671234567" format !
 
 dashboard.otherpairs=Other pairs
 merchants.currencyforoutput = output currency
+dashboard.orderPrice=Price
