--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -266,3 +266,4 @@ validation.phoneincorrect=Введите телефонный номер в фо
 
 dashboard.otherpairs=Другие пары
 merchants.currencyforoutput = Валюта к выводу
+dashboard.orderPrice=Цена
