repair the button "fogot password"

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -164,7 +164,7 @@ myorders.sellorders=sell orders
 myorders.status=
 myorders.text=here you can see and cancel your orders
 myorders.title=my orders
-mywallets.abalance=active balanec
+mywallets.abalance=active balance
 mywallets.balance=credit balance?
 mywallets.commissionbalance=profitable balance
 mywallets.createorder=create order
