additional correct the button "fogot password" for FF

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -165,7 +165,7 @@ myorders.status=
 myorders.text=here you can see and cancel your orders
 myorders.title=my orders
 mywallets.abalance=active balance
-mywallets.balance=credit balance?
+mywallets.balance=credit balance
 mywallets.commissionbalance=profitable balance
 mywallets.createorder=create order
 mywallets.input=Refill
