add capcha for registry form. add locale for controllers messages

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -269,3 +269,4 @@ validation.phoneincorrect=Enter the phone number in "380671234567" format !
 dashboard.otherpairs=Other pairs
 merchants.currencyforoutput = output currency
 dashboard.orderPrice=Price
+register.capchaincorrect=A problem occurred while checking the capcha. Try again, please
