--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -267,3 +267,4 @@ validation.phoneincorrect=Введите телефонный номер в фо
 dashboard.otherpairs=Другие пары
 merchants.currencyforoutput = Валюта к выводу
 dashboard.orderPrice=Цена
+register.capchaincorrect=Возникла ошибка при проверке capcha. Повторите, пожалуйста, еще раз
