Fixed bug with deposit notification localization

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -142,6 +142,8 @@ merchants.sum=Сумма
 merchants.sumToPay=Итого сумма к оплате
 merchants.withdraw=Вывести
 merchants.pendingEnrollment=Зачисление средств приозойдет в течении 48 часов
+#not translated
+merchants.depositNotification = Пожалуйста, оплатите %1s на кошелек %1s
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
