--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -138,6 +138,7 @@ merchants.submitPayment=confirm payment
 merchants.successfulBalanceDeposit=you have successfully deposited your wallet in the amount: {0}
 merchants.successfulBalanceWithdraw=you have successfully withdrawn in the amount: {0}
 merchants.successfulMoneyInput=Thank you. money was input in your wallet.
+merchants.depositNotification = Please pay %1s on the wallet %1s
 merchants.sum=Sum
 merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
