Fixed bugs with backend and frontend

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -36,7 +36,7 @@ dashboard.FAQ=FAQ
 dashboard.PressAboutUs=press about us
 dashboard.SELL=SELL
 dashboard.aboutUs=aboutus
-dashboard.allRightsReserved=© 2016 EXRATES LTD trade marks belong to their corresponding owners. all rights are reserved
+dashboard.allRightsReserved=Â© 2016 EXRATES LTD trade marks belong to their corresponding owners. all rights are reserved
 dashboard.amount=amount
 dashboard.buy=buy
 dashboard.buyCurrency=buy currency
@@ -100,20 +100,20 @@ login.blocked=Account is blocked!
 login.email=Email
 login.errorLogin=Login error!
 login.notFound=Wrong password or login!
-login.password=Ia?ieu
-login.submit=Aieoe
+login.password=Password
+login.submit=Submit
 login.title=Please, login
 mechants.commission=stock exchange commission
 mechants.perfectmoney=Perfect Money
 mechants.yandexmoney=Yandex Money
 merchants.amountToBeCredited=Amount to be enrolled
-merchants.authRejected=payment authorizatio was denied. Please tr again later.
-merchants.cancelPayment=cancel
+merchants.authRejected=Payment authorization was denied. Please try again later.
+merchants.cancelPayment=Cancel
 merchants.commission=commission
 merchants.continue=Continue
 merchants.deposit=Refill
 merchants.dismiss=Dismiss
-merchants.incorrectPaymentDetails=incorrect payment details.
+merchants.incorrectPaymentDetails=Incorrect payment details.
 merchants.inputCurrency=input currency
 merchants.inputTitle=input
 merchants.internalError=an error occurred. Please try again later.
@@ -122,9 +122,9 @@ merchants.invalidSum=invalid sum.
 merchants.limitExceed=limit was exceeded. Please try again.
 merchants.meansOfPayment=Payment method
 merchants.merchants=merchants
-merchants.modalInputCommission=stock exchange commission:
-merchants.modalInputFinalSum=Eoiai noiia e iieaoa : __amount __currency
-merchants.modalInputHeader=you use a payment system for inputting
+merchants.modalInputCommission=stock exchange commission: __amount __currency (__percent)
+merchants.modalInputFinalSum=Total amount to be paid : __amount __currency
+merchants.modalInputHeader=you use a payment system __merchant for inputting __amount __currency
 merchants.modalOutputCommission=Exchange Fee will be : __amount __currency (__percent)
 merchants.modalOutputFinalSum=Amount to be enrolled : __amount __currency
 merchants.modalOutputHeader=You draw __amount __currency through the payment system __merchant
@@ -141,6 +141,7 @@ merchants.successfulMoneyInput=Thank you. money was input in your wallet.
 merchants.sum=Sum
 merchants.sumToPay=Sum to pay
 merchants.withdraw=Withdraw
+merchants.pendingEnrollment=The transfer of money will will occur within next 48 hours
 myorders.amountbuy=commission free amount
 myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
@@ -204,9 +205,9 @@ register.nickname=Nickname*
 register.password=password*
 register.readrules=read and understood registrtion rules*
 register.repeatpassword=repeat password*
-register.sendletter=you've been sent a letterat the address to confirm registration
+register.sendletter=you've been sent a letterat the hash to confirm registration
 register.submit=get registered
-register.successfullyproved=You have successfully verified your email address. Now you can log in
+register.successfullyproved=You have successfully verified your email hash. Now you can log in
 register.title=registration of a new user
 submitorder.buy=buy
 submitorder.cancell=cancel
