--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -141,6 +141,7 @@ merchants.successfulMoneyInput=Спасибо. Средства перечисл
 merchants.sum=Сумма
 merchants.sumToPay=Итого сумма к оплате
 merchants.withdraw=Вывести
+merchants.pendingEnrollment=Зачисление средств приозойдет в течении 48 часов
 myorders.amountbuy=Сумма (без комиссии)
 myorders.amountsell=Сумма
 myorders.amountwithcommission=Сумма с комиссией
