Fixed EN localization bugs

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -223,17 +223,17 @@ subusermenu.commissions=commissions
 subusermenu.faq=FAQ
 subusermenu.news=news
 subusermenu.rules=Rules
-transaction.amount=amount
+transaction.amount=Amount
 transaction.amountBuy=Amount purchase
-transaction.commission=commission(%)
+transaction.commission=Commission(%)
 transaction.commissionAmount=Fee amount
-transaction.currency=currency
-transaction.currencyBuy=Purchase Currency
-transaction.datetime=transaction date
+transaction.currency=Currency
+transaction.currencyBuy=Purchase currency
+transaction.datetime=Transaction date
 transaction.exrates=exrates.me
 transaction.id=Id transactions
-transaction.merchant=payment system
-transaction.operationType=transaction type
+transaction.merchant=Payment system
+transaction.operationType=Transaction type
 transaction.operationTypeAcceptOrder=Accept order
 transaction.operationTypeCreateOrder=Create Order
 transaction.operationTypeINPUT=input
